--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css" />
+
+    <!-- JS -->
+    <script defer src="./js/main.js"></script>
   </head>
   <body>
     <!-- Header -->
