--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="searching">
+    <header>
       <div class="inner">
         <ul class="main_menu">
           <li class="header_logo"><a href="javascript:void(0)">Apple</a></li>
