add_style/sticky_header_navigation

--- a/index.html
+++ b/index.html
@@ -93,5 +93,16 @@
         </div>
       </div>
     </header>
+    <nav>
+      <div class="inner">
+        <h2>iPad</h2>
+        <ul class="nav_menu">
+          <li class="active"><a href="javascript:void(0)">개요</a></li>
+          <li><a href="javascript:void(0)">iPad를 선택하는 이유</a></li>
+          <li><a href="javascript:void(0)">제품 사양</a></li>
+        </ul>
+        <button class="btn">구입하기</button>
+      </div>
+    </nav>
   </body>
 </html>
