--- a/index.html
+++ b/index.html
@@ -216,5 +216,43 @@
         </div>
       </div>
     </section>
+
+    <!-- Display Section -->
+    <section class="display">
+      <div class="inner">
+        <div class="notes">
+          <h1 class="bgtext">빛나는 아이디어에 걸맞은 디스플레이</h1>
+          <div class="figures">
+            <img src="./images/display_notes.jpg" alt="" />
+            <figcaption class="bgtext">노트 필기는 GOOD NOTES5</figcaption>
+          </div>
+        </div>
+        <div class="shareDisplay feature">
+          <div class="figures">
+            <figure>
+              <img src="./images/display_shareplay.png" alt="" />
+              <figcaption class="bgtext">함께 보고 함께 즐기고</figcaption>
+            </figure>
+          </div>
+          <div class="infos info--center">
+            <div class="info">
+              <div class="icon icon--display"></div>
+              <p>
+                놀랍도록 섬세한 디테일과 생생한 색상을 자랑하는 25.0cm Retina
+                디스플레이를 갖춘 iPad. 영화를 감상할 때도, 프로젝트를 진행할
+                때도 또는 멋진 그림을 그릴 때도 더할 나위 없죠.
+              </p>
+            </div>
+            <div class="info">
+              <div class="icon icon--true-tone"></div>
+              <p>
+                True Tone이 주변의 조명에 맞춰 색온도를 조절해줍니다. 덕분에
+                어떤 조명에서도 눈이 편안한 화면을 경험할 수 있죠.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
