add_feat/stage_section_video_controller

--- a/index.html
+++ b/index.html
@@ -277,6 +277,12 @@
                 muted
                 loop
               ></video>
+              <div class="controller--play hide">
+                <img src="./images/video-play.svg" alt="Play" /> 재생
+              </div>
+              <div class="controller--pause">
+                <img src="./images/video-pause.svg" alt="Pause" /> 일시정지
+              </div>
               <figcaption class="bgtext">
                 센터 스테이지 덕분에 영상 통화도 더 자연스럽게
               </figcaption>
