--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -430,6 +430,53 @@
             <a href="javascript:void(0)" class="link"
               >Smart Keyboard에 대해 더 알아보기</a
             >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- iPad OS Section -->
+    <section class="iPadOS">
+      <div class="inner">
+        <h1 class="bgtext">iPad OS. 작업의 성공 방정식</h1>
+        <div class="infos">
+          <div class="info">
+            <p>
+              널찍한 Multi-Touch 디스플레이를 위해 디자인된 iPadOS는
+              강력하면서도 누구든 손쉽게 사용할 수 있습니다.
+            </p>
+          </div>
+          <div class="info">
+            <p>
+              iPadOS 15는 사용하기 쉬운 멀티태스킹 기능, 정보를 검색하고
+              정리하는 새로운 방정식, 향상된 메모 기능 등을 통해 iPad의 성능을
+              한층 더 끌어올립니다.
+            </p>
+            <a href="javascript:void(0)" class="link"
+              >iPadOS의 새로운 기능 살펴보기</a
+            >
+          </div>
+        </div>
+        <div class="figures">
+          <div class="figure-split-view">
+            <figure>
+              <img src="./images/ipados_split_view.png" alt="" />
+              <figcaption class="bgtext">
+                두개의 앱, 서로 양 옆에 두고 쓰기
+              </figcaption>
+            </figure>
+          </div>
+          <div class="figure-widgets">
+            <figure>
+              <img src="./images/ipados_widgets.png" alt="" />
+              <figcaption class="bgtext">홈 화면</figcaption>
+            </figure>
+          </div>
+          <div class="figure-quick-note">
+            <figure>
+              <img src="./images/ipados_quick_note.png" alt="" />
+              <figcaption class="bgtext">어디서나</figcaption>
+            </figure>
           </div>
         </div>
       </div>
