--- a/index.html
+++ b/index.html
@@ -481,5 +481,58 @@
         </div>
       </div>
     </section>
+
+    <!-- Apps Section -->
+    <section class="apps">
+      <div class="inner">
+        <h1 class="bgtext">열정을 살려줄 다양한 앱.</h1>
+        <div class="info">
+          <p>
+            iPad에는 이미 '사진', '메시지', Mail, Safari 등 강력한 Apple 제작
+            앱들이 가득 담겨었습니다. 게다가 100만 개 이상의 iPad전용 앱이
+            준비된 App Store에서는 어떤 작업이든 걸맞은 앱을 찾을 수 있죠.
+            비트를 찍거나, 운동을 하거나, 뉴스를 읽을 수도 있습니다. 심심할 땐
+            친구들과 신나는 게임 한판을 즐길 수도 있죠.
+          </p>
+          <a href="javascript:void(0)" class="link"
+            >App Store에서 iPad용 앱 찾아보기</a
+          >
+        </div>
+        <div class="figures">
+          <div class="figure-masterclass">
+            <figure>
+              <img src="./images/apps_masterclass.png" alt="" />
+              <figcaption class="bgtext">masterclass</figcaption>
+            </figure>
+          </div>
+          <div class="figure-adobe">
+            <figure>
+              <img src="./images/apps_adobe.png" alt="" />
+              <figcaption class="bgtext">Adobe</figcaption>
+            </figure>
+          </div>
+          <div class="figure-fantasian">
+            <figure>
+              <img src="./images/apps_fantasian.png" alt="" />
+              <figcaption class="bgtext">fantasian</figcaption>
+            </figure>
+          </div>
+        </div>
+        <div class="figures">
+          <div class="figure-books">
+            <figure>
+              <img src="./images/apps_books.png" alt="" />
+              <figcaption class="bgtext">books</figcaption>
+            </figure>
+          </div>
+          <div class="figure-good-note">
+            <figure>
+              <img src="./images/apps_goodnotes.png" alt="" />
+              <figcaption class="bgtext"></figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
