--- a/index.html
+++ b/index.html
@@ -561,5 +561,28 @@
         </div>
       </div>
     </section>
+
+    <!-- Accessibility Section -->
+
+    <section class="accessibility">
+      <div class="inner">
+        <h1 class="bgtext">모두를 위해 만들다</h1>
+        <div class="info">
+          <p>
+            누구나 사용할 수 있는 기술이야말로 가장 강력한 기술입니다. iPad는
+            시각, 청각, 운동 및 인지능력 등을 보완해주는 손쉬운 사용 기능을
+            탑재한 이유도 바로 그 때문이죠. 그룹 FaceTime 통화 중 수어를
+            사용하는 사람이 있는 경우, 그 사람이 이야기 중인 것을 알 수 있도록
+            해당 타일을 더 크게 표시해주는 것이 좋은 예입니다.
+          </p>
+          <a href="javascript:void(0)" class="link"
+            >모든 손쉬운 사용 기능 살펴보기</a
+          >
+        </div>
+        <figure>
+          <img src="./images/accessibility.jpg" alt="" />
+        </figure>
+      </div>
+    </section>
   </body>
 </html>
