add_style/main_page_compare_section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/main.css" />
 
     <!-- JS -->
-    <script defer src="./js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -652,6 +652,16 @@
             일이죠.
           </p>
           <a href="javascript:void(0)" class="link">보상 판매 가격 알아보기</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Compare Section -->
+    <section class="compare">
+      <div class="whiteBox">
+        <div class="inner">
+          <h1>당신에게 맞는 iPad는?</h1>
+          <div class="items"></div>
         </div>
       </div>
     </section>
