add_style/main_page/mobile_mode_header
- media 함수를통한 break Point를 생성해서 뷰포트의 넓이에 따라 변하도록 수정

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     <header>
       <div class="inner">
         <ul class="main_menu">
+          <li class="btn_main_menu">
+            <a>
+              <div>
+                <span></span>
+                <span></span>
+              </div>
+            </a>
+          </li>
           <li class="header_logo"><a href="javascript:void(0)">Apple</a></li>
           <li><a href="javascript:void(0)">스토어</a></li>
           <li><a href="javascript:void(0)">Mac</a></li>
