--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               </div>
             </a>
           </li>
+          <div class="search_wrap"></div>
           <li class="header_logo"><a href="javascript:void(0)">Apple</a></li>
           <li><a href="javascript:void(0)">스토어</a></li>
           <li><a href="javascript:void(0)">Mac</a></li>
@@ -98,6 +99,21 @@
               </ul>
             </div>
           </div>
+        </div>
+
+        <div class="clone-menu">
+          <ul>
+            <li><a href="javascript:void(0)">스토어</a></li>
+            <li><a href="javascript:void(0)">Mac</a></li>
+            <li><a href="javascript:void(0)">iPad</a></li>
+            <li><a href="javascript:void(0)">iPhone</a></li>
+            <li><a href="javascript:void(0)">Watch</a></li>
+            <li><a href="javascript:void(0)">AirPods</a></li>
+            <li><a href="javascript:void(0)">TV 및 홈</a></li>
+            <li><a href="javascript:void(0)">Apple 특별 제공</a></li>
+            <li><a href="javascript:void(0)">액세서리</a></li>
+            <li><a href="javascript:void(0)">고객센터</a></li>
+          </ul>
         </div>
       </div>
     </header>
