Fix_style/mobile_mode_main_menu_style

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
               <input type="text" placeholder="appple.com 검색" />
               <div class="search-closer"><a href="javascript:void(0)"></a></div>
             </div>
+            <div class="search-canceler">취소</div>
             <div class="auto-completes">
               <h3>빠른 링크</h3>
               <ul>
