--- a/index.html
+++ b/index.html
@@ -121,8 +121,11 @@
 
     <!-- Navigation Bar -->
     <nav>
+      <div class="shadow"></div>
+      <div class="bg_nav_menu"></div>
       <div class="inner">
         <h2>iPad</h2>
+        <div class="nav_menu_toggler"></div>
         <ul class="nav_menu">
           <li class="active"><a href="javascript:void(0)">개요</a></li>
           <li><a href="javascript:void(0)">iPad를 선택하는 이유</a></li>
